# KadanesSlidingWindow

./: .gitignore  KadanesSlidingWindow  PhiTestCodeImplementation  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_kadane.py
